2010-01-26  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Upgrade the mutc-ptl back-end.

	* tools/lib/host-host-ptl/include/create.tpl,
	* tools/lib/host-host-ptl/include/ptl_svp.h,
	* tools/lib/host-host-ptl/include/template.pl,
	* tools/lib/host-host-ptl/ptl_svp.cc: Update to latest utc-ptl
	code.

	* tools/lib/host-host-ptl/include/ptl_config.h,
	* tools/lib/host-host-ptl/include/ptl_debug.h,
	* tools/lib/host-host-ptl/include/ptl_deps.h,
	* tools/lib/host-host-ptl/include/ptl_svp.h,
	* tools/lib/host-host-ptl/include/ptl_vars.h,
	* tools/lib/host-host-ptl/include/template.pl,
	* tools/lib/host-host-ptl/ptl_debug.cc,
	* tools/lib/host-host-ptl/ptl_svp.cc,
	* tools/lib/host-host-ptl/ptl_vars.cc: Strip license text as it
	has not been decided yet.

2010-01-26  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Fix the MT profiles.

	* tools/lib/mt-profiles/coma128,
	* tools/lib/mt-profiles/coma256,
	* tools/lib/mt-profiles/ml-npcrypt-p1,
	* tools/lib/mt-profiles/ml-npcrypt-p2,
	* tools/lib/mt-profiles/ml-npcrypt-p4,
	* tools/lib/mt-profiles/ml-npcrypt-p8,
	* tools/lib/mt-profiles/rmb1,
	* tools/lib/mt-profiles/rmb128,
	* tools/lib/mt-profiles/rmb256,
	* tools/lib/mt-profiles/rmb4,
	* tools/lib/mt-profiles/rmb8: Use $simargs_base to define the
	number of cores since NCORES is not used any more.

2010-01-26  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Fix call gate to C functions.

	* tools/lib/mtalpha-sim/callgate.s: Use $15 (FP) to carry over the
	pointer to the memory location for return values, instead of $14
	which may be overwritten by the callee

2010-01-25  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Update documentation.

	* doc/NEWS.txt: Update changes since 2.2.

2010-01-25  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Minor packaging fix.

	* lib/Makefile.am: List `cerrno.h' and `undocumented.h'.

	* lib/mtalpha.mk: Clean up more objects..

2010-01-25  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Repurpose option -n of `slr'.

	* tools/bin/slr.in,